fix navbar items text color on dark mode and large screen

--- a/source/_assets/css/main.css
+++ b/source/_assets/css/main.css
@@ -59,7 +59,8 @@
     relative
     lg:bg-transparent 
     lg:p-0
-    dark:text-yellow-900;
+    text-yellow-900
+    dark:lg:text-yellow-200;
 }
 
 .line-before {
